# MindSpore-Ewaste-Recognition-System-MobileNetV3

./: .gitignore  LICENSE  MobileNetV3_Principles.md  README.md  README_modelscope.md  UV_USAGE.md  __init__.py  ewaste_recognition.py  process_dataset.py  pyproject.toml  read_dataset_PIL.py  requirements.txt  upload_to_modelscope.py
config/: config.py
core/: config.py  dataset.py  evaluate.py  mobilenetv3.py  train.py
data_processing/: __init__.py  config.py  main.py
data_processing/core/: dataset_processor.py  image_processor.py
data_processing/utils/: timing.py  user_interface.py
docs/: API.md  ARCHITECTURE.md  DATASET.md  PREPROCESSING.md  USAGE.md
eval/: evaluate.py
image_preprocessing/: README.md  image_analyzer.py  image_converter.py  image_validator.py  preprocess_cli.py  rename_images.py
models/: mobilenetv3.py
train/: train.py
ui/: __init__.py  ewaste_ui.py
utils/: dataset.py
